fixing alignement

--- a/component-library/src/app/pages/select-documentation/select-documentation.component.scss
+++ b/component-library/src/app/pages/select-documentation/select-documentation.component.scss
@@ -9,7 +9,5 @@
 .images {
   display: flex;
   gap: 14px;
-  .img2 {
-    justify-self: center;
-  }
+  align-items: center;
 }
